[package]
name = "ltv"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5"
tui = "0.16.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "3.0.2"
toml = "0.5.8"
rpassword = "5.0.1"
chrono = "0.4"

[patch.crates-io]
tui = {git = "https://github.com/LunaticHacker/tui-rs", branch = "for-ltv"}
